# efa2

./: .gitignore  Makefile  README.md  TODO.txt  efa.cabal  efa2.cabal  test.txt
anforderungen/: Signal.tex  Stil.txt
attic/demo/deltaArith/: Main.hs
attic/demo/vierbein/: Main.hs
attic/examples/patent_example/: Main.hs
bug-demo/2013-02-12-sum-equations-storage/: Main.hs
demo/ASCIIImport/: Main.hs
demo/CSVImport/: Main.hs  fortiss.csv
demo/PLTImport/: Main.hs
demo/Signal/: Demo_SignalCalc.hs  Main.hs  Test_SignalCalc.hs
demo/additiveTerms/: Main.hs  Main_backwards.hs
demo/additiveTermsDynamic/: Main.hs
demo/additiveTermsStatic/: Main.hs
demo/arithmetic/: Sweep.hs
demo/asciiImport/: test.asc
demo/chop/: Main.hs
demo/csvImport/: fortiss.csv
demo/cube/: Main.hs
demo/cumulatedEnergyFlow/: Main.hs
demo/cumulatedFlow/: Main.hs
demo/curve/: Main.hs
demo/deltaArith/: Main.hs
demo/deltaLogic/: Main.hs
demo/distribution/: Main.hs
demo/functionEta/: Main.hs
demo/importModelica/: Test_importModelica.hs  linear_res.csv
demo/lookupEta/: Main.hs
demo/mix/: Main.hs
demo/nodeDefinition/: Main.hs
demo/numericSolving/: Main.hs
demo/optimisation/findBestIndex/: Main.hs
demo/optimisation/scaleMap/: Main.hs
demo/optimisation/stateForcing/: Main.hs
demo/optimisation/sweep/: Main.hs  Main_double.hs  eta.txt
demo/pretty/: Demo_Report.hs  Main.hs
demo/probabilities/: Main.hs
demo/rPlot/: Test_importModelica.hs
demo/ratio/: Main.hs
demo/signal/: Main.hs
demo/signalSolving/: Main.hs
demo/sliceSignals/: Demo_Sequence.hs  Demo_addZeroCrossings.hs  Demo_sliceSignals.hs  Demo_sliceSignals_alt.hs  Demo_sliceZeroCrossSignals.hs  Test_addZeroCrossings.hs  Test_sliceSignals.hs  Test_sliceSignals_alt.hs  Test_sliceZeroCrossSignals.hs
demo/solver/1/: Main.hs
demo/solver/solving/: Main.hs
demo/solver/solving_the_loop/: Main.hs  make.sh
demo/stateAnalysis/: Main.hs
demo/stateFlow/: Main.hs
demo/symbolicArith/: Main.hs
demo/symbolicDelta/: Main.hs
demo/symbolicSolving/: Main.hs
demo/tables/: Main.hs
demo/tree/: Main.hs
demo/typedArith/: ClassMatchingTest.hs  Demo_Signal.hs  Demo_Vector.hs  GanzGanzNeu.hs  GanzNeu.hs  Main15_Polytest_TypeWrapper.hs  Main17_Polytest_SampeType.hs  Main_HH.hs  Main_HHSignalData.hs  Main_HH_PG.hs  Main_new.hs  Main_new2.hs  Main_new_alternativeADT.hs  Neu.hs  TH.hs
demo/undirEdge/: Main.hs
demo/unknownSignal/: Main.hs
demo/vierbein/: Main.hs
examples/ModelicaEFA/: EFA_Blocks_simple.mo
examples/building/maps/: eta.txt  power.txt
examples/building/src/: Main.hs
examples/elementary/additive_terms/: Main.hs
examples/elementary/lookupEta/: Main.hs  topology.dot
examples/elementary/modLinearOne/: Main_modLinearOne.hs  modLinearOne.RectA_res.csv  modLinearOne.RectB_res.csv  modLinearOne.SinA_res.csv  modLinearOne.SinB_res.csv  modLinearOne.TrapA_res.csv  modLinearOne.mo
examples/elementary/modLinearTwo/: modLinearTwo.RectA_res.csv  modLinearTwo.SinA_res.csv  modLinearTwo.SinB_res.csv  modLinearTwo.TrapB_res.csv  modLinearTwo.mo
examples/elementary/modThreeWay_sto/: Main_modThreeWay_sto.hs  modThreeWay_sto.mo
examples/elementary/newSolver/: Main.hs
examples/elementary/newSolverSymbolic/: Main.hs
examples/elementary/numericSolving/: Main.hs
examples/elementary/optimalStorageUsage/: Main.hs
examples/elementary/optimisingStorage/: Main.hs
examples/elementary/patent_example/: Main.hs
examples/elementary/readAndCut/: Main.hs  modThreeWay_sto.RecB_res.csv
examples/elementary/sequenceFlowGraph/: Main.hs
examples/elementary/sequenzflussgraph/: Main.hs
examples/elementary/signalSolving/: Main.hs
examples/elementary/stateAnalysisExample/: Main.hs
examples/elementary/symbolicDelta/: Main.hs
examples/elementary/symbolicSolving/: Main.hs
examples/elementary/threeWaySto/: Main_ThreeWay_sto.hs  SektionsMix.csv  SektionsMix.ods
examples/elementary/threeWaySto_newSolver/: Main_ThreeWay_sto.hs  README.txt  make.sh
examples/elementary/threeWaySto_pred/: Main_ThreeWay_sto.hs  Main_ThreeWay_sto_alt.hs
examples/elementary/time/: Main.hs
examples/elementary/twoWays/: Main.hs  topology.dot
examples/elementary/vierbein_delta/: Main.hs
examples/vehicle/: BatterySimple.mo  BrakeSystem.mo  Chassis.mo  Controller_Battery.mo  Controller_SeriesHybrid.mo  DriverGasOnly.mo  Driver_withBrake.mo  DrivingResistance.mo  ElectricMotorSchematic.mo  ElectricMotorSimple.mo  EngineTest.mo  Engine_schematic.mo  GasPedal.mo  GearboxSingleSpeed.mo  VehicleElectricSingleSpeed.mo  VehicleElectric_withBrake.mo  VehicleSimple.mo  Vehicle_SeriesHybrid.mo  Vehicle_SeriesHybrid.mos  driving_resistance.mo  efficiency_constant.mo  electric_motor_schematic.mo  gearbox_single_speed.mo  vehicle_body.mo
examples/vehicle/simulation/: BatterySimple.mo  BrakeSystem.mo  Controller_Battery.mo  Driver_withBrake.mo  Engine_schematic.mo  GasPedal.mo  GearboxSingleSpeed.mo  Vehicle_SeriesHybrid.mo
examples/vehicle/src/: Main.hs
hlint/: efa2.hs
input/: linear_res.csv3~  log_s2b_sect0-2.txt
sandbox/delaunay/: HalfPlaneMap.hs  Main.hs  tri.gp
sandbox/efadiff/: efadiff.pl
sandbox/error_handling/1/: Main.hs
sandbox/genetic_programming/: Genetic.hs  Main.hs  Main2.hs  Polynome.hs  Surface.hs
sandbox/lagrange/: Main.hs
sandbox/loops/: Main.hs
sandbox/makestub/: Main.hs  test.dot
sandbox/plane/: Main.hs
sandbox/pretty/: Main.hs
sandbox/setModelicaExperiment/: Main.hs  SmartEnergyLivingLab_init.xml
sandbox/stateanalysis/1/: Main.hs
sandbox/stateanalysis/2/: Main.hs
sandbox/stateanalysis/3/: Main.hs
simulation/: Electric.mo  GHSimulation.mo  Grid.mo
src/: Main.hs  Main_merge.hs  TODO.txt  testImport.hs
src/EFA/: Graph.hs  Utility.hs  Value.hs
src/EFA/Action/: DemandAndControl.hs  EenergyFlowAnalysis.hs  EnergyFlowAnalysis.hs  EtaFunctions.hs  Flow.hs  Optimisation.hs  (+2 more)
src/EFA2/: Bijection.hs  Graph.hs  Utility.hs
test/EFA/: Test.hs  TestUtility.hs
tests/sliceSignals/: Test_addZeroCrossings.hs  Test_sliceSignals.hs
tests/typedArith/: Main.hs
tools/Convert/: Convert.hs
(+612 files in other folders)
