Name:                efa
Version:             2.1
Synopsis:            Energy flow analysis
Description:         Energy flow analysis
Homepage:            http://energiefluss.info/
License:             AllRightsReserved
License-File:        LICENSE
Author:              Ingenieurbüro Guttenberg & Hördegen
Maintainer:          guttenberg@energiefluss.info
-- Copyright:           
Category:            Engineering
Build-type:          Simple
Cabal-version:       >=1.8

Flag buildTests
  Description: build test suite (makes trouble with TemplateHaskell and dynamic linking)
  Default: True

Flag buildExamples
  Description: Build complex examples
  Default: True

Flag buildDemos
  Description: Build demonstrations of single library features
  Default: True

Flag buildTools
  Description: Build tools
  Default: True

Library
  Build-Depends:
    graphviz >=2999.13 && <2999.15,
    vector ==0.9.*,
    fingertree-psqueue >=0.3 && <0.4,
    fingertree >=0.0 && <0.1,
    gnuplot >=0.5.2 && <0.6,
    text ==0.11.*,
    pretty-show >=1.2 && <1.3,
    pretty ==1.1.*,
    random ==1.0.*,
    Stream >=0.4.6 && <0.5,
    non-empty >=0.0.2 && <0.1,
    containers >=0.4 && <0.6,
    data-accessor-transformers >=0.2.1 && <0.3,
    data-accessor >=0.2.2 && <0.3,
    utility-ht >=0.0.9 && <0.1,
    QuickCheck >=2.4 && <2.6,
    transformers >= 0.3 && < 0.4,
    unique-logic >= 0.2 && < 0.3,
    parsec >=3.1 && <3.2,
    filepath >=1.3 && <1.4,
    base ==4.5.*,
    colour
  Hs-Source-Dirs:      src
  GHC-Options: -Wall -fwarn-incomplete-uni-patterns -fwarn-tabs
  Exposed-Modules:
    EFA.IO.CSVImport
    EFA.IO.ASCIIImport
    EFA.IO.CSVParser
    EFA.IO.PLTImport
    EFA.IO.PLTParser
    EFA.IO.TableParserTypes
    EFA.IO.TableParser
    EFA.Utility
    EFA.Utility.Async
    EFA.Utility.Bifunctor
    EFA.Utility.Map
    EFA.Utility.Stream
    EFA.Utility.TotalMap
    EFA.Utility.Trace
    EFA.Utility.TypeConstructor
    EFA.Signal.Base
    EFA.Signal.SequenceData
    EFA.Signal.Typ
    EFA.Signal.Data
    EFA.Signal.Vector
    EFA.Signal.Record
    EFA.Signal.Signal
    EFA.Signal.SignalFill
    EFA.Signal.Sequence
    EFA.Signal.Colour
    EFA.Signal.PlotIO
    EFA.Signal.Plot
    EFA.Signal.ConvertTable
    EFA.Symbolic.OperatorTree
    EFA.Symbolic.SumProduct
    EFA.Symbolic.Mixed
    EFA.Symbolic.Variable
    EFA.Report.Typ
    EFA.Report.Base
    EFA.Report.Report
    EFA.Report.Format
    EFA.Report.FormatValue
    EFA.Graph
    EFA.Graph.Draw
    EFA.Graph.Topology
    EFA.Graph.Topology.Index
    EFA.Graph.Topology.Node
    EFA.Graph.Topology.StateAnalysis
    EFA.Graph.Flow
    EFA.Graph.CumulatedFlow
    EFA.Equation.System
    EFA.Equation.Result
    EFA.Equation.Environment
    EFA.Equation.Record
    EFA.Equation.Variable
    EFA.Equation.Arithmetic
    EFA.Equation.MultiValue
    EFA.Equation.Stack
    EFA.Equation.Consistent.MultiValue
    EFA.Equation.Consistent.Stack
    EFA.Equation.Consistent.Dimension
    EFA.Example.Utility
    EFA.Example.Absolute
    EFA.Example.NestedDelta
    EFA.Example.AssignMap
    EFA.Example.Index
    EFA.Example.EtaSys


-- sollte man auf Cabal-Test umstellen,
-- sobald Cabal-Test vernünftig läuft
Executable test-efa
  Main-Is: EFA/Test.hs
  GHC-Options: -Wall
  Hs-Source-Dirs: test
  If flag(buildTests)
    Build-Depends:
      efa,
      quickcheck-properties >=0.1 && <0.2,
      -- alternative: checkers
      QuickCheck,
      containers,
      utility-ht,
      template-haskell ==2.7.*,
      base
  Else
    Buildable: False
  Other-Modules:
    EFA.Test.Utility
    EFA.Test.Sequence
    EFA.Test.MultiValue
    EFA.Test.Stack
    EFA.Test.Arithmetic
    EFA.Test.EquationSystem
    EFA.Test.EquationSystem.Given

Executable example-sequenzflussgraph
  Main-Is: examples/elementary/sequenzflussgraph/Main.hs
  GHC-Options: -Wall
  If flag(buildExamples)
    Build-Depends:
      efa,
      utility-ht,
      base
  Else
    Buildable: False

Executable example-optimisingstorage
  Main-Is: examples/elementary/optimisingStorage/Main.hs
  GHC-Options: -Wall
  If flag(buildExamples)
    Build-Depends:
      gnuplot,
      efa,
      vector,
      data-accessor,
      utility-ht,
      base
  Else
    Buildable: False

Executable example-optimalStorageUsage
  Main-Is: examples/elementary/optimalStorageUsage/Main.hs
  GHC-Options: -Wall
  If flag(buildExamples)
    Build-Depends:
      gnuplot,
      efa,
      vector,
      data-accessor,
      utility-ht,
      containers,
      base
  Else
    Buildable: False




Executable example-vehicle
  Hs-Source-Dirs: examples/vehicle/src
  Main-Is: Main.hs
  Other-Modules:
    Modules.Plots
    Modules.Signals
    Modules.System
    Modules.Analysis
  GHC-Options: -Wall
  If flag(buildExamples)
    Build-Depends:
      efa,
      gnuplot,
      graphviz,
      utility-ht,
      containers,
      utility-ht,
      non-empty,
      filepath,
      base
  Else
    Buildable: False

Executable example-energy
  Hs-Source-Dirs: examples/energy/localGrid/src
  Main-Is: Main.hs
  Other-Modules:
    Modules.Signals
    Modules.System
    Modules.Analysis
  GHC-Options: -Wall
  If flag(buildExamples)
    Build-Depends:
      efa,
      gnuplot,
      graphviz,
      utility-ht,
      containers,
      utility-ht,
      non-empty,
      filepath,
      base
  Else
    Buildable: False

Executable optimise-energy
  Hs-Source-Dirs: examples/energy/localGrid/src
  Main-Is: Optimise.hs
  Other-Modules:
    Modules.Signals
    Modules.System
    Modules.Analysis
  GHC-Options: -Wall
  If flag(buildExamples)
    Build-Depends:
      efa,
      gnuplot,
      graphviz,
      utility-ht,
      containers,
      utility-ht,
      non-empty,
      filepath,
      vector,
      base
  Else
    Buildable: False

Executable example-time
  Main-Is: examples/elementary/time/Main.hs
  GHC-Options: -Wall
  If flag(buildExamples)
    Build-Depends:
      efa,
      utility-ht,
      base
  Else
    Buildable: False

Executable example-twoways
  Main-Is: examples/elementary/twoWays/Main.hs
  GHC-Options: -Wall
  If flag(buildExamples)
    Build-Depends:
      efa,
      base
  Else
    Buildable: False



Executable demo-numericSolving
  Main-Is: demo/numericSolving/Main.hs
  GHC-Options: -Wall
  If flag(buildDemos)
    Build-Depends:
      efa,
      graphviz,
      base
  Else
    Buildable: False

Executable demo-signalSolving
  Main-Is: demo/signalSolving/Main.hs
  GHC-Options: -Wall
  If flag(buildDemos)
    Build-Depends:
      efa,
      base
  Else
    Buildable: False

Executable demo-unknownSignal
  Main-Is: demo/unknownSignal/Main.hs
  GHC-Options: -Wall
  If flag(buildDemos)
    Build-Depends:
      efa,
      gnuplot,
      containers,
      base
  Else
    Buildable: False



Executable demo-tables
  Main-Is: demo/tables/Main.hs
  GHC-Options: -Wall
  If flag(buildDemos)
    Build-Depends:
      efa,
      gnuplot,
      containers,
      base
  Else
    Buildable: False



Executable demo-symbolicSolving
  Main-Is: demo/symbolicSolving/Main.hs
  GHC-Options: -Wall
  If flag(buildDemos)
    Build-Depends:
      efa,
      base
  Else
    Buildable: False

Executable demo-symbolicDelta
  Main-Is: demo/symbolicDelta/Main.hs
  GHC-Options: -Wall
  If flag(buildDemos)
    Build-Depends:
      efa,
      base
  Else
    Buildable: False

Executable demo-additive-terms-dynamic
  Main-Is: demo/additiveTermsDynamic/Main.hs
  GHC-Options: -Wall
  If flag(buildDemos)
    Build-Depends:
      efa,
      gnuplot,
      non-empty,
      containers,
      utility-ht,
      base
  Else
    Buildable: False

Executable demo-additive-terms-static
  Main-Is: demo/additiveTermsStatic/Main.hs
  GHC-Options: -Wall
  If flag(buildDemos)
    Build-Depends:
      efa,
      gnuplot,
      non-empty,
      data-accessor,
      containers,
      utility-ht,
      base
  Else
    Buildable: False

Executable demo-signalcalc
  Main-Is: demo/Signal/Main.hs
  GHC-Options: -Wall
  If flag(buildDemos)
    Build-Depends:
      gnuplot,
      efa,
      gnuplot,
      utility-ht,
      base
  Else
    Buildable: False

Executable demo-sequence
  Main-Is: demo/sliceSignals/Demo_Sequence.hs
  GHC-Options: -Wall
  If flag(buildDemos)
    Build-Depends:
      gnuplot,
      efa,
      containers,
      utility-ht,
      gnuplot,
      base
  Else
    Buildable: False

Executable demo-addzerocrossings
  Main-Is: demo/sliceSignals/Demo_addZeroCrossings.hs
  GHC-Options: -Wall
  If flag(buildDemos)
    Build-Depends:
      gnuplot,
      efa,
      containers,
      utility-ht,
      gnuplot,
      base
  Else
    Buildable: False

Executable demo-slicesignals-alt
  Main-Is: demo/sliceSignals/Demo_sliceSignals_alt.hs
  GHC-Options: -Wall
  If flag(buildDemos)
    Build-Depends:
      efa,
      containers,
      utility-ht,
      gnuplot,
      base
  Else
    Buildable: False

Executable demo-slicesignals
  Main-Is: demo/sliceSignals/Demo_sliceSignals.hs
  GHC-Options: -Wall
  If flag(buildDemos)
    Build-Depends:
      efa,
      containers,
      utility-ht,
      gnuplot,
      base
  Else
    Buildable: False

Executable demo-slicezerocrosssignals
  Main-Is: demo/sliceSignals/Demo_sliceZeroCrossSignals.hs
  GHC-Options: -Wall
  If flag(buildDemos)
    Build-Depends:
      efa,
      containers,
      utility-ht,
      gnuplot,
      base
  Else
    Buildable: False

Executable demo-undiredge
  Main-Is: demo/undirEdge/Main.hs
  GHC-Options: -Wall
  If flag(buildDemos)
    Build-Depends:
      efa,
      base
  Else
    Buildable: False

Executable demo-csvimport
  Main-Is: demo/CSVImport/Main.hs
  GHC-Options: -Wall
  If flag(buildDemos)
    Build-Depends:
      efa,
      base
  Else
    Buildable: False

Executable demo-pltimport
  Main-Is: demo/PLTImport/Main.hs
  GHC-Options: -Wall
  If flag(buildDemos)
    Build-Depends:
      efa,
      base
  Else
    Buildable: False

Executable demo-asciiimport
  Main-Is: demo/ASCIIImport/Main.hs
  GHC-Options: -Wall
  If flag(buildDemos)
    Build-Depends:
      efa,
      base
  Else
    Buildable: False

Executable demo-ratio
  Main-Is: demo/ratio/Main.hs
  GHC-Options: -Wall
  If flag(buildDemos)
    Build-Depends:
      efa,
      base
  Else
    Buildable: False

Executable demo-pretty
  Main-Is: demo/pretty/Main.hs
  GHC-Options: -Wall
  If flag(buildDemos)
    Build-Depends:
      efa,
      base,
      containers
  Else
    Buildable: False

Executable demo-nodedefinition
  Main-Is: demo/nodeDefinition/Main.hs
  GHC-Options: -Wall
  If flag(buildDemos)
    Build-Depends:
      efa,
      base,
      containers
  Else
    Buildable: False

Executable demo-stateanalysis
  Main-Is: demo/stateAnalysis/Main.hs
  GHC-Options: -Wall
  If flag(buildDemos)
     Build-Depends:
       efa,
       base,
       containers
  Else
    Buildable: False

Executable demo-functioneta
  Main-Is: demo/functionEta/Main.hs
  GHC-Options: -Wall
  If flag(buildDemos)
     Build-Depends:
       efa,
       base
  Else
    Buildable: False

Executable demo-lookupeta
  Main-Is: demo/lookupEta/Main.hs
  GHC-Options: -Wall
  If flag(buildDemos)
     Build-Depends:
       efa,
       base
  Else
    Buildable: False

Executable demo-deltaLogic
  Main-Is: demo/deltaLogic/Main.hs
  GHC-Options: -Wall
  If flag(buildDemos)
    Build-Depends:
      efa,
      base
  Else
    Buildable: False

Executable demo-cumulatedEnergyFlow
  Main-Is: demo/cumulatedEnergyFlow/Main.hs
  GHC-Options: -Wall
  If flag(buildDemos)
    Build-Depends:
      efa,
      base
  Else
    Buildable: False
